--- a/main.html
+++ b/main.html
@@ -1,2 +1,20 @@
-<script src="./script.js"></script>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+        <h1>тут был Артём(фиксик)</h1>
+    </div>
+
+
+    <script src="./script.js"></script>
 <meta charset="utf-8"/>
+</body>
+</html>
