--- a/main.html
+++ b/main.html
@@ -7,13 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div>
         <h1>тут был Артём(фиксик)</h1>
+      
     </div>
-
-
+   <div class="color">
+    <button class="button--event" id="but">нажмите</button>
+   </div>
+   <a rel="stylesheet" href="https://youtu.be/dQw4w9WgXcQ?si=prBANHIHLfJjZvwV" style="color: black;">ссылка</a>пше
     <script src="./script.js"></script>
 <meta charset="utf-8"/>
 </body>
