--- a/main.html
+++ b/main.html
@@ -17,7 +17,8 @@
    <div class="color">
     <button class="button--event" id="but">нажмите</button>
    </div>
-   <a rel="stylesheet" href="https://youtu.be/dQw4w9WgXcQ?si=prBANHIHLfJjZvwV" style="color: black;">ссылка</a>пше
+   <a rel="stylesheet" href="https://youtu.be/dQw4w9WgXcQ?si=prBANHIHLfJjZvwV" style="color: black;">ссылка</a>
+   <img src="./img/kamamber.jpg" alt="СФРОКШ">
     <script src="./script.js"></script>
 <meta charset="utf-8"/>
 </body>
