changed size of pic

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <button class="button--event" id="but">нажмите</button>
    </div>
    <a rel="stylesheet" href="https://youtu.be/dQw4w9WgXcQ?si=prBANHIHLfJjZvwV" style="color: black;">ссылка</a>
-   <img src="./img/kamamber.jpg" alt="СФРОКШ">
+   <img src="./img/kamamber.jpg" alt="СФРОКШ" class="img-cammamb">
     <script src="./script.js"></script>
 <meta charset="utf-8"/>
 </body>
